--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,7 +7,8 @@ services:
       context: .
       dockerfile: ./Dockerfile
     environment:
-      JAVA_OPTS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005,quiet=y
+      NODE_ENV: development
     ports:
       - 3000:3000
-      - 5005:5005
+      - 9229:9229
+    command: ["node", "--inspect=0.0.0.0:9229", "./bin/www"]
